# cantondex

./: .config  .env.example  .gitignore  BACKEND_CANTON_COMPLETE.md  CANTON_IMPLEMENTATION_GUIDE.md  CANTON_WALLET_INTEGRATION_COMPLETE.md  CONCEPT_VERIFICATION.md  CONTRIBUTING.md  DEMO_SCRIPT.md  DEMO_SETUP.md  DEPLOYMENT_STATUS.md  DOCUMENTATION_INDEX.md  EPIC-06-IMPLEMENTATION.md  EPIC-07-IMPLEMENTATION.md  EPIC-09-SUMMARY.md  FINAL_STATUS.md  FINAL_SUBMISSION_PACKAGE.md  HACKATHON_ARCHITECTURE.md  HACKATHON_COMPLETE_SUMMARY.md  HACKATHON_DEMO_GUIDE.md  HACKATHON_LINKS.md  HACKATHON_PROTOTYPE_READY.md  HACKATHON_REALITY_CHECK.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  JURY_REVIEW_CHECKLIST.md  JURY_TEST_RESULTS.md  LICENSE  MODERN_DESIGN_UPDATE.md  OPEN_ALL_DEMOS.bat  PR-SUMMARY.md  PROJECT_STATUS_SUMMARY.md  PROTOTYPE_DEMO.md  QUICK_START.md  QUICK_START_BACKEND_CANTON.md  README.md  README_HACKATHON.md  README_IMPLEMENTATION.md  SETUP.md  (+18 more)
.github/: pull_request_template.md
canton-config/: participant.conf
cantondex-backend/: .dockerignore  .env.example  DOCKER.md  EPIC-02-IMPLEMENTATION.md  docker-compose.yml  order-event-schema.json  settlement-event-schema.json  trade-event-schema.json
cantondex-backend/matching-engine/: Cargo.toml  Dockerfile
cantondex-backend/matching-engine/src/: main.rs  orderbook.rs  types.rs
daml-contracts/: README.md  daml.yaml
docs/: ARCHITECTURE.md  COMPLIANCE.md  DEVOPS.md  GETTING-STARTED.md  HACKATHON_PLAN.md  LOCAL_DEVELOPMENT.md  README.md  SECURITY.md
terraform/: README.md  main.tf  (+2 more)
(+306 files in other folders)
