[package]
name = "matching-engine"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.11"
prost = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
indexmap = "2.1"
num-decimal = "0.2"
decimal = "0.1"
proptest = "1.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "matching_engine_benchmarks"
harness = false
